--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = pep8,pylint,py27,{py27,pypy}-mock-pymongo-pyexecjs,{py34,py35,py36,py37,py38,py39}-{pymongo-pyexecjs},py38,py38-{pymongo,pyexecjs}
+envlist = pep8,pylint,py27,{py27,pypy}-mock-pymongo-pyexecjs,{py35,py36,py37,py38,py39}-{pymongo-pyexecjs},py38,py38-{pymongo,pyexecjs}
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_* TEST_MONGO_HOST
 basepython =
     py27: python2.7
-    py34: python3.4
     py35: python3.5
     py36: python3.6
     py37: python3.7
@@ -22,7 +21,7 @@ deps=
     pymongo361: pymongo==3.6.1
     pyexecjs: pyexecjs
 commands=
-  mock,py34,py35,py36,py37,py38,py39: nosetests -x -s --with-coverage --cover-package=mongomock --cover-erase --show-skipped {posargs}
+  mock,py35,py36,py37,py38,py39: nosetests -x -s --with-coverage --cover-package=mongomock --cover-erase --show-skipped {posargs}
   {pypy,py27}-!mock: nosetests -x -s --with-coverage --cover-package=mongomock --cover-erase --show-skipped -I test__patch {posargs}
   codecov
 
