--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 author = Rotem Yaari
 author-email = vmalloc@gmail.com
 name = mongomock
+version = 3.22.2
 description = Fake pymongo stub for testing simple MongoDB-dependent code
 description-file = README.rst
 license = BSD
